# axum-convenience

./: Cargo.toml  README.md
.github/workflows/: rust.yml
example/: shutdown_endpoint.rs  simple.rs  tls_server.rs
self-signed-certs/: generate.sh  localhost-key.pem  localhost.pem  rootCA-key.pem  rootCA.pem
src/: app.rs  lib.rs  shutdown.rs
tests/: helpers.rs  integration_test.rs  shutdown.rs  tls.rs
