[package]
name = "axum-convenience"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "simple"
path = "example/simple.rs"

[[example]]
name = "shutdown_endpoint"
path = "example/shutdown_endpoint.rs"

[[example]]
name = "tls_server"
path = "example/tls_server.rs"
required-features = ["tls"]

[dependencies]
axum = "0.4"
axum-server = { version = "0.3" }
futures-util = "0.3"
hyper = "0.14"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["signal", "macros"] }
tower-http = { version = "0.2", features = ["trace"] }
tracing = "0.1"
tokio-rustls = "0.23"

[dev-dependencies]
anyhow = "1"
async-stream = "0.3"
hyper = { version = "*", features = ["client"] }
once_cell = "1"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber = { version="0.3", features = ["env-filter"] }

[features]
default = [ "tls" ]
tls = [ "axum-server/tls-rustls" ]